--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vulcan-ecs-deployer",
-	"version": "0.0.2",
+	"version": "v0.0.2",
 	"description": "A command line utility for blue-green deployments on AWS Elastic Container Service.",
 	"main": "bin/index.js",
 	"scripts": {
